@@ -1,6 +1,6 @@
 % File src/library/base/man/norm.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2010--2015 R Core Team
+% Copyright 2010--2015, 2023 R Core Team
 % Copyright 2010--2012 The R Foundation
 % Distributed under GPL 2 or later
 
@@ -28,8 +28,9 @@ norm(x, type = c("O", "I", "F", "M", "2"))
 	(maximum absolute column sum);}
       \item{\code{"I"} or \code{"i"}}{specifies the \bold{i}nfinity norm (maximum
 	absolute row sum);}
-      \item{\code{"F"} or \code{"f"}}{specifies the \bold{F}robenius norm (the
-	Euclidean norm of \code{x} treated as if it were a vector);}
+      \item{\code{"F"}, \code{"f"}, \code{"E"} or \code{"e"}}{specifies the
+	\bold{F}robenius norm (the \bold{E}uclidean norm of \code{x}
+	treated as if it were a vector);}
       \item{\code{"M"} or \code{"m"}}{specifies the \bold{m}aximum modulus of
 	all the elements in \code{x}; and}
       \item{\code{"2"}}{specifies the \dQuote{spectral} or 2-norm, which
@@ -50,7 +51,7 @@ norm(x, type = c("O", "I", "F", "M", "2"))
   detailed study of the FORTRAN code.
 }
 \value{
-  The matrix norm, a non-negative number.
+  The matrix norm, a non-negative number.  Zero for a 0-extent (empty) matrix.
 }
 \source{
   Except for \code{norm = "2"}, the LAPACK routine \code{DLANGE}.
@@ -75,8 +76,12 @@ stopifnot(all.equal(norm(x1, "F"),
 
 hilbert <- function(n) { i <- 1:n; 1 / outer(i - 1, i, `+`) }
 h9 <- hilbert(9)
-## all 5 types of norm:
+## all 5 (4 different) types of norm:
 (nTyp <- eval(formals(base::norm)$type))
 sapply(nTyp, norm, x = h9)
+stopifnot(exprs = { # 0-extent matrices:
+    sapply(nTyp, norm, x = matrix(, 1,0)) == 0
+    sapply(nTyp, norm, x = matrix(, 0,0)) == 0
+})
 }
 \keyword{math}
